--- a/page_src.html
+++ b/page_src.html
@@ -27,7 +27,7 @@
       .jump {text-align:center}
       .footer {display: flex; justify-content: space-between; color: #888}
       ::selection {color: #fff; background-color: #0073AE;}
-      .form-popup {display: none; position: fixed; margin: 0 35vw; width: 30vw; top: 10vh;
+      .form-popup {display: none; position: fixed; margin: 0 30vw; width: 40vw; top: 10vh;
                       color: #000; background-color:#fff; padding: 1vw; border-radius: 6px;}
       .modal {display:none; position:fixed; top: 0; left: 0; z-index: 1; 
                   width:100vw; height:100vw; background-color: rgba(0,0,0,0.5); }
@@ -69,20 +69,23 @@
     </div>
     
     <div id="myModal" class="modal">
-    <div class="form-popup" id="myForm">
+    <div class="form-popup" id="myForm" style="display:table;">
+    <img id="dlpreview" style="max-height:100%; width: 10vw; margin-right: 1vw; float:left" src=""></img>
+    <div style="float:right; width:28vw; height:100%;">
     <form method="get" target="_blank" action="WSGI_URL">
         <label for="address">Printer's legal name and street address:</label><br/>
         <input type="text" placeholder="P. Sherman Printing, 42 Wallaby Way, Sydney NSW 2003" name="printer" required style="width:100%;">
         <br/> <br/>
         <label for="bleed">Bleed (optional):</label>
         <input type="number" min="0" max="10" step="1" placeholder="0" name="bleed" optional> mm
-        <br/> <br/>
+        <br/> <br/> <br/> 
         <input type="hidden" name="name" value="" id=dlname> <input type="hidden" name="format" value="pdf">
-        <div style="display:flex; align-items: flex-end; width:100%">
+        <div style="display:flex; align-items: flex-end; width:100%; position: absolute; right: 6px; bottom:6px;">
             <button type="button" class="btn cancel" style="margin-left: auto" onclick="closeForm()">Cancel</button>
             <button type="submit" class="btn" style="color: #fff; background-color: #0073AE; margin-left:0">Download PDF</button>
         </div>
     </form>
+    <div>
     </div>
     </div>
     
@@ -96,6 +99,7 @@
         if(name==""){
           return;
         }
+        document.getElementById("dlpreview").setAttribute("src", event.target.src);
         document.getElementById("dlname").setAttribute("value", name);
         document.getElementById("myForm").style.display = "block";
         document.getElementById("myModal").style.display = "block";
