make button colours when pressed nice

--- a/page_src.html
+++ b/page_src.html
@@ -43,7 +43,7 @@
       .form-popup {display: none; color: #000; background-color:#fff; padding: 1vw; border-radius: 6px; flex-wrap:wrap;}
       .btn {font-size: 1em; border: none; border-radius: 6px; margin-right: 6px; padding: 6px 12px; background-color: #eee;}
       .btn-primary {color: #fff; background-color: #0073AE;}
-      .btn:active {background-color:#005683;}
+      .btn:active {color: #fff; background-color:#005683;}
       input {font-size: 0.9em;}
                   
     </style>
