add favicon support

--- a/Logos/logo_src.html
+++ b/Logos/logo_src.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Logos - Pirate Party Australia</title>
-    <!--- <link rel="stylesheet" href="style.css"> --->
-    <!--- <script src="script.js"></script> --->
+    <link rel="icon" type="image/png" href="../favicon.png">
     <style media="screen" type="text/css">
         body {font-family: "Open Sans", sans-serif;
                 width: 90vw; /*min-width: 600px;*/ margin:auto;
