--- a/page_src.html
+++ b/page_src.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#0073AE">
     <meta name="Description" content="Pirate Poster Generator">
     <title>Pirate Poster Generator | PPAU-Graphics</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <base target="_blank">
     <style media="screen" type="text/css">
       body {font-family: "Open Sans", sans-serif;
